# Harfbuzz

./: .gitignore  .gitmodules  CMakeLists.txt  FontHandler.cpp  FontHandler.h  README.md  Renderer.cpp  Renderer.h  TextShapingPerformanceTester.cpp  TextShapingPerformanceTester.h  main  main.cpp
CustomFontCreator/: fontToolsTest.py  fontforgeTest.py
Shaders/: fragment_shader.glsl  vertex_shader.glsl
harfbuzz/: Brewfile  Makefile  config.h  config.status  configure  libtool
harfbuzz/docs/: Makefile
harfbuzz/docs/html/: api-index-7-1-0.html  api-index-full.html  harfbuzz-hb-version.html  harfbuzz.devhelp2
harfbuzz/perf/: Makefile
harfbuzz/src/: Makefile  hb-features.h  libharfbuzz.la  libharfbuzz_la-hb-aat-layout.lo  libharfbuzz_la-hb-aat-map.lo  libharfbuzz_la-hb-blob.lo  libharfbuzz_la-hb-buffer-serialize.lo  libharfbuzz_la-hb-buffer-verify.lo  libharfbuzz_la-hb-buffer.lo  libharfbuzz_la-hb-common.lo  libharfbuzz_la-hb-draw.lo  libharfbuzz_la-hb-face-builder.lo  libharfbuzz_la-hb-face.lo  libharfbuzz_la-hb-fallback-shape.lo  libharfbuzz_la-hb-font.lo  libharfbuzz_la-hb-ft.lo  libharfbuzz_la-hb-glib.lo  libharfbuzz_la-hb-map.lo  libharfbuzz_la-hb-number.lo  libharfbuzz_la-hb-ot-cff1-table.lo  libharfbuzz_la-hb-ot-cff2-table.lo  libharfbuzz_la-hb-ot-color.lo  libharfbuzz_la-hb-ot-face.lo  libharfbuzz_la-hb-ot-font.lo  libharfbuzz_la-hb-ot-layout.lo  libharfbuzz_la-hb-ot-map.lo  libharfbuzz_la-hb-ot-math.lo  libharfbuzz_la-hb-ot-meta.lo  libharfbuzz_la-hb-ot-metrics.lo  libharfbuzz_la-hb-ot-name.lo  libharfbuzz_la-hb-ot-shape-fallback.lo  libharfbuzz_la-hb-ot-shape-normalize.lo  libharfbuzz_la-hb-ot-shape.lo  libharfbuzz_la-hb-ot-shaper-arabic.lo  libharfbuzz_la-hb-ot-shaper-default.lo  libharfbuzz_la-hb-ot-shaper-hangul.lo  libharfbuzz_la-hb-ot-shaper-hebrew.lo  libharfbuzz_la-hb-ot-shaper-indic-table.lo  libharfbuzz_la-hb-ot-shaper-indic.lo  libharfbuzz_la-hb-ot-shaper-khmer.lo  (+18 more)
harfbuzz/src/.deps/: libharfbuzz_la-hb-aat-layout.Plo  libharfbuzz_la-hb-aat-map.Plo  libharfbuzz_la-hb-blob.Plo  libharfbuzz_la-hb-buffer-serialize.Plo  libharfbuzz_la-hb-buffer-verify.Plo  libharfbuzz_la-hb-buffer.Plo  libharfbuzz_la-hb-common.Plo  libharfbuzz_la-hb-draw.Plo  libharfbuzz_la-hb-face-builder.Plo  libharfbuzz_la-hb-face.Plo  libharfbuzz_la-hb-fallback-shape.Plo  libharfbuzz_la-hb-font.Plo  libharfbuzz_la-hb-ft.Plo  libharfbuzz_la-hb-glib.Plo  libharfbuzz_la-hb-map.Plo  libharfbuzz_la-hb-number.Plo  libharfbuzz_la-hb-ot-cff1-table.Plo  libharfbuzz_la-hb-ot-cff2-table.Plo  libharfbuzz_la-hb-ot-color.Plo  libharfbuzz_la-hb-ot-face.Plo  libharfbuzz_la-hb-ot-font.Plo  libharfbuzz_la-hb-ot-layout.Plo  libharfbuzz_la-hb-ot-map.Plo  libharfbuzz_la-hb-ot-math.Plo  libharfbuzz_la-hb-ot-meta.Plo  libharfbuzz_la-hb-ot-metrics.Plo  libharfbuzz_la-hb-ot-name.Plo  libharfbuzz_la-hb-ot-shape-fallback.Plo  libharfbuzz_la-hb-ot-shape-normalize.Plo  libharfbuzz_la-hb-ot-shape.Plo  libharfbuzz_la-hb-ot-shaper-arabic.Plo  libharfbuzz_la-hb-ot-shaper-default.Plo  libharfbuzz_la-hb-ot-shaper-hangul.Plo  libharfbuzz_la-hb-ot-shaper-hebrew.Plo  libharfbuzz_la-hb-ot-shaper-indic-table.Plo  libharfbuzz_la-hb-ot-shaper-indic.Plo  libharfbuzz_la-hb-ot-shaper-khmer.Plo  libharfbuzz_la-hb-ot-shaper-myanmar.Plo  libharfbuzz_la-hb-ot-shaper-syllabic.Plo  libharfbuzz_la-hb-ot-shaper-thai.Plo  (+16 more)
harfbuzz/src/.libs/: libharfbuzz.0.dylib  libharfbuzz.lai
harfbuzz/test/: Makefile
harfbuzz/test/api/: Makefile
harfbuzz/test/fuzzing/: Makefile
harfbuzz/test/shape/: Makefile
harfbuzz/test/shape/data/: Makefile
harfbuzz/test/shape/data/aots/: Makefile
harfbuzz/test/shape/data/in-house/: Makefile
harfbuzz/test/shape/data/text-rendering-tests/: Makefile
harfbuzz/test/subset/: Makefile
harfbuzz/test/subset/data/: Makefile  Makefile.in
harfbuzz/test/subset/data/repack_tests/: Makefile
harfbuzz/test/threads/: Makefile
harfbuzz/util/: Makefile
